--- a/css/style.css
+++ b/css/style.css
@@ -137,9 +137,16 @@ img {
   align-items: center;
 }
 
+.navigation-item {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  max-width: 160px;
+}
+
 .navigation-item:nth-child(4n+1) {
   justify-self: left;
   padding-left: 72px;
+  max-width: 230px;
 }
 
 .navigation-item:nth-child(4n+2) {
@@ -153,6 +160,7 @@ img {
 .navigation-item:nth-child(4n) {
   justify-self: right;
   padding-right: 72px;
+  max-width: 230px;
 }
 
 /* Меню на флексах */
@@ -187,11 +195,6 @@ img {
 }
 
  /*------------ */
-
-.navigation-item {
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
 
 .navigation-link {
   line-height: 26px;
@@ -309,6 +312,7 @@ img {
 }
 
 .advantages-item-accent img {
+  align-self: center;
   width: 800px;
   height: 256px;
   object-fit: cover;
@@ -323,11 +327,11 @@ img {
   grid-column: 3 / 4;
 }
 
-.advantages-item-accent:first-child img {
+.advantages-item-accent:nth-child(odd) img {
   grid-column: 2 / 4;
 }
 
-.advantages-item-accent:nth-child(2) img {
+.advantages-item-accent:nth-child(even) img {
   grid-column: 1 / 3;
 }
 
@@ -441,7 +445,7 @@ img {
 }
 
 .form-display-button {
-  padding: 31px 125px 29px;
+  padding: 31px 90px 29px;
   width: 568px;
 }
 
@@ -499,6 +503,7 @@ img {
   flex-wrap: wrap;
   align-items: center;
   margin-right: auto;
+  max-width: 100px;
 }
 
 .hotel-search-input {
@@ -507,6 +512,7 @@ img {
   padding: 6px 10px 7px;
   width: 308px;
   font: inherit;
+  text-transform: uppercase;
   background-color: var(--basic-bg);
   border: 2px solid var(--basic-bg);
 }
@@ -585,6 +591,7 @@ img {
 .filters-fieldset {
   margin: 0;
   margin-right: 122px;
+  max-width: 220px;
   padding: 0;
   border: none;
 }
@@ -623,8 +630,6 @@ img {
 }
 
 .filters-label {
-  position: relative;
-  padding-left: 40px;
   font-weight: 400;
   cursor: pointer;
 }
@@ -645,6 +650,12 @@ img {
     transform: translateY(0);
   }
 } */
+
+.filters-checkbox {
+  position: relative;
+  display: block;
+  padding-left: 40px;
+}
 
 .filters-checkbox::before,
 .filters-checkbox::after {
@@ -1005,7 +1016,7 @@ img {
   padding: 18px 60px 20px;
   padding-bottom: 20px;
   align-items: center;
-  min-height: 120px;s
+  min-height: 120px;
 }
 
 .main-footer-index {
