доступность - главная страница

--- a/css/style.css
+++ b/css/style.css
@@ -455,8 +455,12 @@ img {
   overflow: hidden;
 }
 
-.section-map img {
+/* .section-map img {
   display: block;
+} */
+
+.sedona-google-map {
+  border: none;
 }
 
 /* Hotel search form */
